maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:5: error: not found: value Dirction
  setDirection(Dirction.NORTH)
               ^PledgeMaze:19: error: not found: value angle
    right();angle+=1
            ^PledgeMaze:21: error: not found: value angle
      left; angle -=1; forward()
            ^PledgeMaze:28: error: not found: value angle
    left(); angle-=1
            ^